change of title

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="discription">
                 <p class="rating"><i></i>4.1(115)</p>
                 <h3>Apple Iphone 11</h3>
-                <p class="rating">Referrence 1254</p>
+                <p class="rating">Referrence 1254yuy</p>
                 <h4>$ 650</h4>
                 <button>Add to Cart</button>
             </div>
@@ -130,3 +130,6 @@
 </div>
 </body>
 </html>
+
+git config --global user.email "you@example.com"
+  git config --global user.name "Your Name"
