change of title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shoping Cart</title>
+    <title>Shoping Cart V2</title>
     <link rel="stylesheet" href="Style-3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
             <div class="discription">
                 <p class="rating"><i></i>4.1(115)</p>
                 <h3>Apple Iphone 11</h3>
-                <p class="rating">Referrence 1254yuy</p>
+                <p class="rating">Referrence 1254</p>
                 <h4>$ 650</h4>
                 <button>Add to Cart</button>
             </div>
@@ -130,6 +130,3 @@
 </div>
 </body>
 </html>
-
-git config --global user.email "you@example.com"
-  git config --global user.name "Your Name"
